<resources>
    <string name="pref_sidmodel">Default Sid model</string>
    <string name="pref_sidmodel_summary">Used if there is no model specified in a .sid file.</string>
    <string-array translatable="false" name="arr_sidmodel">
        <item>MOS 6581</item>
        <item>MOS 8580</item>
    </string-array>
    <string-array translatable="false" name="arr_sidmodel_entries">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="invalid_files">Player paused. Invalid files.\n\nThere is something wrong with your files.\n\nFor you to examine the situation the app come to a halt.\n\nYou can try to load new files or quit the app by pressing the back button.</string>
    <string name="app_name">Modo - Computer Music Player</string>
    <string name="seek_warning_forward">Please note, seeking not possible in this format. Activating fast forward instead.</string>
    <string name="button_filebrowser">Browse music</string>
    <string name="text_track"> 0 / 0 </string>
    <string name="loading_failed">[ Loading failed! ]</string>
    <string name="hint_loadfile">Touch \&quot;Browse music\&quot; to start.</string>
    <string name="app_description">Plays 8/16bit computer music :)</string>
    <string name="reading_directory">Reading directory&#8230;</string>
    <string name="text_file_details">File details</string>
    <string name="now_playing">now playing</string>
    <string-array name="arr_stdplaytime">
        <item>1min</item>
        <item>2min</item>
        <item>3min</item>
        <item>4min</item>
        <item>5min</item>
        <item>6min</item>
        <item>7min</item>
        <item>8min</item>
        <item>9min</item>
        <item>10min</item>
        <item>20min</item>
        <item>30min</item>
        <item>40min</item>
        <item>50min</item>
        <item>60min</item>
    </string-array>
    <string-array translatable="false" name="arr_stdplaytime_entries">
        <item>60000</item>
        <item>120000</item>
        <item>180000</item>
        <item>240000</item>
        <item>300000</item>
        <item>360000</item>
        <item>420000</item>
        <item>480000</item>
        <item>540000</item>
        <item>600000</item>
        <item>1200000</item>
        <item>1800000</item>
        <item>2400000</item>
        <item>3000000</item>
        <item>3600000</item>
    </string-array>
    <string name="pref_default_playtime">Default playtime</string>
    <string name="text_no_file_details">&lt;no info available&gt;</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="dialog_about"><![CDATA[
        <b>Modo v2.6b</b><br><br>
        <small>Bastian Pflieger<br>
        &lt;wb@illogical.de&gt;<br><br>
        Spanish translation by Gorka Oteiza.<br>
        French translation by Zod.<br>
        Chinese translation by SuperMarioX.<br>
        Polish translation by Łukasz Wollnikowski.<br>
        Italian translation by Filippo &quot;GasPanic&quot; Scaboro.<br><bR>
        Thanks to
        Abrimaal, Frapsman123, Aron Alliston, Shay Green.<br><br>
        </small>
        <b>Enjoy some great tunes!</b>]]>
    </string>
    <string name="pref_sound_boost">Volume boost</string>
    <string name="pref_sound_boost_summary">Increases the volume, but can result in oversampling.</string>
    <string name="pref_sound_boost_modules">Volume boost modules</string>
    <string name="pref_sound_boost_summary_modules">Increases the volume, but can result in clipping / bad quality.\nFile extensions: .mod, .xm, .it, .med, .okt, .s3m</string>
    <string name="pref_sound_boost_nsf">Volume boost Famicom</string>
    <string name="pref_sound_boost_summary_nsf">File extensions: .nsf, .nsfe</string>
    <string name="pref_sound_boost_spc">Volume boost Snes</string>
    <string name="pref_sound_boost_summary_spc">File extensions: .spc, .rsn</string>
    <string name="pref_sound_boost_vgm">Volume boost Mega Drive</string>
    <string name="pref_sound_boost_summary_vgm">File extensions: .vgm, .vgz</string>
    <string name="pref_sound_boost_gbs">Volume boost Game Boy</string>
    <string name="pref_sound_boost_summary_gbs">File extension: .gbs</string>
    <string name="pref_sound_boost_ay">Volume boost Spectrum/CPC</string>
    <string name="pref_sound_boost_summary_ay">File extension: .ay</string>
    <string name="pref_sound_boost_sap">Volume boost Pokey</string>
    <string name="pref_sound_boost_summary_sap">File extension: .sap</string>
    <string name="pref_sound_boost_hes">Volume boost PC-Engine</string>
    <string name="pref_sound_boost_summary_hes">File extension: .hes</string>
    <string name="pref_sound_boost_kss">Volume boost Msx/Sega</string>
    <string name="pref_sound_boost_summary_kss">File extension: .kss</string>
    <string name="pref_sound_boost_gym">Volume boost Mega Drive (old)</string>
    <string name="pref_sound_boost_summary_gym">File extension: .gym</string>
    <string name="pref_sound_boost_ym">Volume boost Atari ST</string>
    <string name="pref_sound_boost_summary_ym">File extension: .ym</string>
    <string name="pref_sound_boost_sid">Volume boost C64</string>
    <string name="pref_sound_boost_summary_sid">File extensions: .sid, .mus</string>
    <string name="pref_allowdups">Allow duplicate entries</string>
    <string name="pref_allowdups_summary">If enabled you can add a track multiple times to a playlist.</string>
    <string name="pref_fade_in">Fade in duration</string>
    <string name="pref_fade_in_summary">Does not apply to tracker formats.</string>
    <string name="pref_fade_out">Fade out duration</string>
    <string name="pref_fade_out_summary">Does not apply to tracker formats.</string>
    <string-array name="arr_fade">
        <item>Disable</item>
        <item>1 second</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>4 second</item>
        <item>5 seconds</item>
        <item>6 seconds</item>
        <item>7 second</item>
        <item>8 seconds</item>
        <item>9 seconds</item>
        <item>10 seconds</item>
    </string-array>
    <string-array translatable="false" name="arr_fade_entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="arr_sound_boost">
        <item>No boost</item>
        <item>+1</item>
        <item>+2</item>
        <item>+3</item>
    </string-array>
    <string-array translatable="false" name="arr_sound_boost_entries">
        <item>0</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="help_text"><![CDATA[
        <b>About</b><br><br>
        <small>
        You can playback the following music file formats:<br><br>
        &bull; Tracker modules:<br><i>.mod .xm .it .s3m .med .okt</i><br><br>
        &bull; Commodore C64:<br><i>.sid .mus</i><br><br>
        &bull; Nintendo Game Boy / NES / SNES:<br><i>.gbs .nsf .nsfe .spc .rsn</i><br><br>
        &bull; Sega Master System / Mega Drive / Genesis:<br><i>.gym .vgm .vgz</i><br><br>
        &bull; Atari / Amstrad CPC / Spectrum:<br><i>.sap .ay .ym</i><br>
        </small><br>
        <br><b>Quickstart</b><br>
        <small>
        <br><b>To terminate the playback service, pause music and hit the back button.</b>
        <br>
        <br>&bull; Copy some music files to your device.
        <br>&bull; Navigate to your music directory.
        <br>&bull; Touch a music file to start.
        <br>&bull; Hold the Previous/Next button to play the previous/next file in current directory.<br>
        </small><br>
        <br><b>Remarks</b><br><br>
        <small>
        <b>C64 SID &amp; MUS</b>
        <br><br>&bull; The player has builtin songlength support for HVSC #64. You can not use an external file. I will update the builtin songlength database as needed. I have decided to do, because parsing the database from the original file at each startup is to slow. I have converted the database into a custom small size format for fast and easy access within the player.
        <br><br>&bull; SID emulation is CPU intensive (especially RSID), so expect stutter if you play in background if you have a low end device.
        <br><br><b>Tracker Modules</b>
        <br><br>&bull; If a module is looped at the end, the player loops that part three times and then loads the next file. There is currently no setting to change this by the user.
        <br><br>&bull; If you seek within the file, the sound may appear corrupted. That is because you skip patterns and this is a result of the how the file format works.
        <br><br>That is all for the moment. Please enjoy some great tunes.
        <br><br>You can contact me anytime.
        <br>&lt;wb@illogical.de&gt;
        <br><br>Bastian Pflieger<br>December 1, 2011
        <br><br>
        </small>
        <br><b>Credits</b><br><br>
        <small>
        &bull; Shay Green - Gme:<br>http://code.google.com/p/game-music-emu<br><br>
        &bull; Chris Moeller - Gme NES Chips/VGM:<br>https://github.com/kode54/Game_Music_Emu<br><br>
        &bull; Piotr Fusik - Asap:<br>http://asap.sourceforge.net<br><br>
        &bull; Arnaud Carré - StSound:<br>http://leonard.oxg.free.fr/stsound.html<br><br>
        &bull; MikMod:<br>http://mikmod.sourceforge.net<br><br>
        &bull; SidPlay2:<br>http://sidplay2.sourceforge.net<br><br>
        &bull; OffGao - Nezplug++:<br>http://offgao.no-ip.org/program/nezplug++.html<br><br>
        &bull; Dave Hooper - SaaSound:<br>http://simonowen.com/sam/saasound/<br><br>
        </small>]]>
    </string>
    <string name="pref_default_playtime_summary">Is used as the track length if no track information is available. Does not apply to tracker formats.</string>
    <string name="pref_overlay_color_summary">Set wallpaper overlay color and alpha value.</string>
    <string name="pref_overlay_color">Wallpaper overlay color</string>
    <string name="menu_shuffle">Toggle Shuffle</string>
    <string name="menu_loop">Toggle Loop</string>
    <string name="menu_sleep_timer_plus">Sleep Timer +10min</string>
    <string name="menu_sleep_timer_cancel">Stop Sleep Timer</string>
    <string name="pref_interpolation_summary">Applies only to tracker formats. Requires more CPU time, better sound output.</string>
    <string name="pref_interpolation">Interpolation</string>
    <string name="pref_mediabuttons">Ignore Media Buttons</string>
    <string name="pref_mediabuttons_summary">Enable if other music apps cause problems.</string>
    <string name="pref_shake">Shake</string>
    <string name="pref_shake_summary">Set the intensity level to load next song file.</string>
    <string name="pref_silence">Silence detection</string>
    <string name="pref_silence_summary">Increase to fix possible playback problems at the begin of a track.</string>
    <string name="pref_seekbar">Disable seek bar</string>
    <string name="pref_seekbar_summary">No more pattern change or fast forward by accident.</string>
    <string name="pref_action_player">Automatic action</string>
    <string name="pref_action_player_summary">Action to perform after all files were played once.</string>
    <string name="pref_scanfiles">Scan files</string>
    <string name="pref_scanfiles_summary">File browser displays game name or first title. Zip files not yet scanned.</string>
    <string name="menu_add_tune">Add</string>
    <string name="menu_playlists">Playlists</string>
    <string name="welcome">Welcome!</string>
    <string name="pref_flatzip">Flat zip files</string>
    <string name="pref_flatzip_summary">Shows all entries in a zip files at once. Limits to 2000 files.</string>
</resources>